[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["Jonathan Turnock <Jonathan.Turnock@outlook.com>"]
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
pytest-cov = "^2.10.0"

[tool.poetry.scripts]
flask = "poetry_scripts:flask"
clean = "poetry_scripts:clean"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
